# MQSolver_benchmark

./: .gitignore  CMakeLists.txt  README.md
challenge/: README.md  main  mq-resident4-55-2.txt  mq4-55-2-f.txt  mqsolver.cpp  mqsolver.h
cmake/: CHECK_AVX512_PRES.cmake
data/: mq46.txt  mq46_resident.txt
exec/: mqsolver.cpp
include/: mqsolver.h  param.h  utils.h
include/mqsolver_avx2/: avx2_intrinsic_ext.h  lin_func.h  mq_arg.h
include/mqsolver_avx512/: avx512_intrinsic_ext.h  lin_func.h  mq_arg.h
src/mqsolver_avx2/: lin_func.cpp  mq_arg.cpp
src/mqsolver_avx512/: lin_func.cpp  mq_arg.cpp
